Replace emptyList by List.of